cracion de la pagina web estatica que lleva la documentacion del servidor

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "server"   : "localhost",
     "port"     : "5432",
-    "user"     : "paul",
+    "user"     : "yoel",
     "pass"     : "cascadesheet",
     "database" : "institutional"
 }
