integracion a los usuarios recuperacion de contraseña mediante el correo electronico del usuario quin lo solicito

--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,13 @@
         "database" : "institutional"
     },
     "Mode": {
-        "dev" : false
+        "dev" : true
+    },
+    "Email": {
+        "name": "Mucha nota que se nota",
+        "from": "paul.antezana.2@gmail.com",
+        "password": "Mc]-7EEP}vJ{q{P@",
+        "server": "smtp.gmail.com:465",
+        "host": "smtp.gmail.com"
     }
 }
