--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
         "key": "Mc]-7EEP}vJ{q{P@"
     },
     "Mode": {
-        "dev" : true
+        "dev" : false
     },
     "Email": {
         "name": "Mucha nota que se nota",
