--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
         "key": "Mc]-7EEP}vJ{q{P@"
     },
     "Email": {
-        "name": "Mucha nota que se nota",
+        "name": "SINST",
         "from": "paul.antezana.2@gmail.com",
         "password": "Mc]-7EEP}vJ{q{P@",
         "server": "smtp.gmail.com:465",
